<resources>
    <string name="app_name">Calculator</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="div">/</string>
    <string name="asterisk">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="eq">=</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="delete">C</string>
    <string name="all_clear">AC</string>
    <string name="init_text_calc">0"</string>
</resources>